[tool.poetry]
name = "vim-remote-dev"
version = "0.1.0"
description = ""
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.1.18"
textual-inputs = "^0.2.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pynvim = "^0.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
